--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     container_name: vpn
     build: alpine-custom
     image: villcabo/ovpn-client
+    restart: unless-stopped
     privileged: true
     cap_add:
       - NET_ADMIN
