Refactor entrypoint and setup scripts: update sleep duration, fix container name, and improve variable handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ networks:
 
 services:
   vpn:
-    container_name: vpn
+    container_name: vpn_sintesis
     build: alpine-custom
     image: villcabo/ovpn-client
     restart: unless-stopped
