--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,16 @@ services:
     build: alpine-custom
     image: villcabo/ovpn-client
     restart: unless-stopped
-    # privileged: true
     cap_add:
-      - NET_ADMIN # Necesario para configurar interfaces de red
-      - SYS_ADMIN # Necesario para algunas operaciones de red
+      - NET_ADMIN
+      - SYS_ADMIN
     devices:
       - /dev/net/tun
     sysctls:
       net.ipv4.ip_forward: 1
+    dns:
+      - 199.3.0.253
+      - 8.8.8.8
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${PATH_CONF:-/path/to/vpn.ovpn}:/root/vpn.ovpn
