Refactor Dockerfile and update README: switch base image to Ubuntu 24.04, remove unused scripts, and enhance documentation for shared IP configuration

--- a/alpine-custom/Dockerfile
+++ b/alpine-custom/Dockerfile
@@ -1,5 +1,4 @@
-# FROM alpine:latest
-FROM ubuntu:latest
+FROM ubuntu:24.04
 
 LABEL maintainer="Bismarck Villca <bismarck.villca@gmail.com>"
 
@@ -18,23 +17,7 @@ RUN apt-get update && \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Setting ssh server
-# RUN sed -i 's/AllowTcpForwarding no/AllowTcpForwarding yes/' /etc/ssh/sshd_config
-# RUN sed -i 's/GatewayPorts no/GatewayPorts yes/' /etc/ssh/sshd_config
-# RUN sed -i 's/X11Forwarding no/X11Forwarding yes/' /etc/ssh/sshd_config
-
-# Create alpine user
-ARG USER=root
-ARG PASS=root
-# ENV HOME=/home/$USER
-# RUN addgroup -g 1000 $USER
-# RUN adduser -u 1000 -G $USER -h $HOME -D $USER
-# RUN echo -n $USER:$PASS | chpasswd
-
 # Copy files
-EXPOSE 22
-COPY start-ovpn.sh /start-ovpn.sh
-COPY start-sshserver.sh /start-sshserver.sh
 COPY entrypoint.sh /entrypoint.sh
 
 # Entrypoint
