--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 10.0.0.0/8
+        - subnet: 10.55.11.0/28 # Use /28 for 16 IPs
 
 services:
   vpn:
-    container_name: vpn_sintesis
-    build: alpine-custom
+    container_name: ovpn-client
+    build: ubuntu-custom
     image: villcabo/ovpn-client
-    # restart: unless-stopped
+    restart: unless-stopped
     cap_add:
       - NET_ADMIN
       - SYS_ADMIN
@@ -27,12 +27,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${PATH_CONF:-/path/to/vpn.ovpn}:/root/vpn.ovpn
-      # - ~/.ssh/config:/root/.ssh/config:ro
-      # - ~/.ssh/id_ed25519:/root/.ssh/id_ed25519
     environment:
       OVPN_USERNAME: ${OVPN_USERNAME:-username}
       OVPN_PASSWORD: ${OVPN_PASSWORD:-password}
-      SHARED_IPS: ${SHARED_IPS}
     networks:
       myvpn-net:
-        ipv4_address: 10.0.0.13
