feat: update configuration and management scripts for OpenVPN service

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
+# Path to your OpenVPN configuration file (.ovpn)
 PATH_CONF=/path/file/config.ovpn
+
+# Username for OpenVPN authentication
 VPN_USERNAME=username
+
+# Password for OpenVPN authentication
 VPN_PASSWORD=password
-# --------------------------------------------------------------
-CONTAINER_NAME=ovpn-client # Nombre del contenedor
-SHARED_IPS="199.3.0.0/24 199.14.10.0/24 192.168.190.0/24" # Reemplaza esto por tus IPs reales
+
+# Name of the Docker container for the VPN client
+CONTAINER_NAME=ovpn-client
+
+# Space-separated list of subnets to route through the VPN container
+# Example: "192.168.1.0/24 10.0.0.0/16"
+SHARED_IPS="192.168.1.0/24 10.0.0.0/16"
+
+# IP address to ping for VPN connectivity validation
+# Example: 8.8.8.8 (Google DNS) or your VPN gateway
+VPN_VALIDATION_IP=192.168.0.1
